test_suite/tests/ui/enum-representation/untagged-and-variant-renamed.stderr
error: adding a alias to a variant of an untagged enum does nothing
 --> tests/ui/enum-representation/untagged-and-variant-renamed.rs:6:10
  |
6 |     #[serde(alias = "foo")]
  |             ^^^^^

error: renaming a variant of an untagged enum does nothing
 --> tests/ui/enum-representation/untagged-and-variant-renamed.rs:8:10
  |
8 |     #[serde(rename = "bar")]
  |             ^^^^^^
